<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Catnic Warehouse</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="warehouse_text">WAREHOUSE</string>
    <string name="loading_text">Loading…</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login_text_btn">LOGIN</string>
    <string name="home_title">Catnic GmbH</string>
    <string name="incoming">Incoming</string>
    <string name="packing">Packing</string>
    <string name="distribute">Distribute</string>
    <string name="defective_items">Defective items</string>
    <string name="picking">Picking</string>
    <string name="inventory">Inventory</string>
    <string name="movements">Movements</string>
    <string name="operations">Operations</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="new_delivery">New Delivery</string>
    <string name="header_delivery_title">Delivery</string>
    <string name="supplier_title">Suppliers</string>
    <string name="search_hint">Search…</string>
    <string name="default_search_text">Results Found</string>
    <string name="add_another_article">ADD ANOTHER ARTICLE</string>
    <string name="done">DONE</string>
    <string name="pers_nliche_daten_label">Personal data</string>
    <string name="persnliche_einstellungen_label">Change personal settings</string>
    <string name="camera_dectection_text">Scan the serial number. This can be found on the type plate on the tool, battery pack or charger.</string>
    <string name="serial_numbers_helper_title">How to find the serial number of your tool</string>
    <string name="scan_article">Scan article</string>
    <string name="article_number">Article Number</string>
    <string name="artikel_number">Article number</string>
    <string name="manuel_input">Manuel input</string>
    <string name="manual_input">Manual Input</string>
    <string name="code_number">Code Number</string>
    <string name="confirm">Confirm</string>
    <string name="unknown_bar_code">Unknown Barcode</string>
    <string name="popup_description">The barcode is unknown, please verify the code or report the issue</string>
    <string name="scan_again">Scan Again</string>
    <string name="assign_now">Assign now</string>
    <string name="metallic_profile">Metallic Profile</string>
    <string name="manual_assignment">Manual assignment</string>
    <string name="amount_items">Amount items</string>
    <string name="amount_of_items">Amount of items</string>
    <string name="save">SAVE</string>
    <string name="prefix_mus">/prc</string>
    <string name="new_purchase_order">New purchase order</string>
    <string name="purchase_title">Purchase orders</string>
    <string name="header_match_found">Match found</string>
    <string name="emty_bar_code_search_field">Please input code number</string>
    <string name="stockyard_emty_name_search_field">Please select a valid stockyard</string>
    <string name="detail_article_numer">Article number</string>
    <string name="detail_quantity">Quantity current delivery</string>
    <string name="detail_total_order_item_quantity">Total order quantity</string>
    <string name="enter_the_barcode_of_the_product">Need to enter the %s of the %s</string>
    <string name="amount_items_invalid_item_amount">Please, insert value between 0 and %d</string>
    <string name="article_match_found">match found</string>
    <string name="warning_title">WARNING</string>
    <string name="warning_body">there are still items to be assigned, please check again</string>
    <string name="delivery_complete_title">Delivery complete</string>
    <string name="delivery_complete_body">The items is distribute correctly</string>
    <string name="delivery_complete_positive_cta">New incoming</string>
    <string name="delivery_complete_neutral_cta">CANCEL</string>
    <string name="purchase_orders_item_position">Position - %s</string>
    <string name="purchase_orders_item_delivered">Delivered - %d</string>
    <string name="purchase_orders_detail_header">Purchase order</string>
    <string name="purchase_order_item_number">Item number</string>
    <string name="purchase_order_total_order_quantity">Total order quantity</string>
    <string name="purchase_order_amount_of_items">Amount of items</string>
    <string name="purchase_orders_amount_items_items">items</string>
    <string name="purchase_orders_ho_many_items_label">How many items you want to assign in this order?</string>
    <string name="delivery_overview_delivery_code">Delivery code</string>
    <string name="delivery_overview_suppliers">Suppliers</string>
    <string name="delivery_overview_article">Article</string>
    <string name="delivery_overview_take_a_note">Take a note</string>
    <string name="delivery_overview_complete_delivery">Complete Delivery</string>
    <string name="delivery_note_header">Note</string>
    <string name="delivery_note_hint_description_note">Description note</string>
    <string name="delivery_note_save">Save</string>
    <string name="corrective_stock">Corrective Stock</string>
    <string name="search">Search</string>
    <string name="type_of_delivery">Type of delivery</string>
    <string name="select_a_delivery_type_to_proceed">Select a delivery type to proceed</string>
    <string name="normal_delivery">Normal delivery</string>
    <string name="return_delivery">Return</string>
    <string name="continue_delivery">Continue</string>
    <string name="back">Back</string>
    <string name="unloading_stockyards">Unloading Stockyards</string>
    <string name="scanStockyards">Scan Stockyard</string>
    <string name="continue_without">Continue Without</string>
    <string name="scan_location">Scan Location</string>
    <string name="location_number">Location Number</string>
    <string name="location">Location</string>
    <string name="stockyard">stockyard</string>
    <string name="quantity_current_delivery">Quantity current delivery</string>
    <string name="defective_articles">Defective articles</string>
    <string name="code_match_found">Code found match</string>
    <string name="put_in_stockyard">Put in stockyard</string>
    <string name="change_unit_type">Change unit type</string>
    <string name="unit_meter_type">Unit meter type</string>
    <string name="unit_meter_type_subtitle">Select the unit meter type</string>
    <string name="unit_type_footer">Select an item in the list to assign a unit type</string>
    <string name="defective_reasons">Defective reasons</string>
    <string name="defective_reason_subtitle">Select the main reason why this article is marked as defective item</string>
    <string name="defective_reasons_footer">Select an item in the list to assign a defective reason</string>
    <string name="defective_article_subtitle">You want to mark this item as defective in your incoming order?</string>
    <string name="amount_of_defective_items">Amount of defective items</string>
    <string name="defective_reason">Defective reason</string>
    <string name="leave_your_note">Leave your note...</string>
    <string name="comments">Comments</string>
    <string name="yes_mark_as_defective">Yes, Mark as defective</string>
    <string name="change_defective_reason">Change defective reason</string>
    <string name="cancel">Cancel</string>
    <string name="type_your_comment">Type your comment</string>
    <string name="defective_info_desc">Refers to any unit that does not meet the established quality standards or has faults in functionality, packaging, or appearance. Please record the quantity of defective items in this section to ensure proper quality control and to streamline the return or repair process for these items. This assists in maintaining the integrity of the inventory and ensures that only products in perfect condition are offered to customers</string>
    <string name="what_is_a_defective_item">What is a defective item?</string>
    <string name="delivery">Delivery</string>
    <string name="artikel_number_with_value">Article-Nr %s</string>
    <string name="delivery_code">Delivery code</string>
    <string name="date">Date</string>
    <string name="artikel">Article</string>
    <string name="take_a_note">Take a note</string>
    <string name="note">Note</string>
    <string name="comment">Comment</string>
    <string name="complete_delivery">Complete delivery</string>
    <string name="delivery_completed">Delivery Completed</string>
    <string name="back_to_overview">Back Overview</string>
    <string name="no_inventory">No Inventories so far</string>
    <string name="no_inventory_available">Currently No Inventories Available.For more information, please consult with the operations manager at your warehouse.</string>
    <string name="start_inventory">Start Inventory</string>
    <string name="begin_inventory">Begin the inventory process with the stockcard for the designated area at hand. You will be guided step by step to count and record each item and its units into the system. Make sure to check every storage space and reconcile the physical figures with the systems data to ensure inventory accuracy. This process is crucial for efficient warehouse operations and inventory management.</string>
    <string name="scan_stockyard">SCAN STOCKYARD TO START</string>
    <string name="drop_off">Drop Off</string>
    <string name="packing_list_incomplete">Packing List Incomplete!</string>
    <string name="your_packing_list_is_not_complete_would_you_like_to_pause_the_packing_process_and_resume_it_later_or_you_can_close_anyway_and_finich_the_packing">Your packing list is not complete. Would you like to pause the packing process and resume it later? or you can ‘close anyway’ and finish the packing?</string>
    <string name="close_anyway">Close Anyway</string>
    <string name="pause_the_list">Pause this list</string>
    <string name="cancel_this_list">Cancel this list</string>
    <string name="do_you_want_to_proceed_and_cancel_the_packing_list">Do you want to proceed and cancel the packing list?</string>
    <string name="canceling_this_process_will_require_you_to_move_all_items_you_ve_already_collected_to_a_designated_dropzone_n_n_this_ensures_the_items_are_reorganized_or_returned_to_their_original_locations_in_the_warehouse_please_make_sure_to_properly_transfer_the_items_to_a_dropzone_before_completing_the_cancellation">Canceling this process will require you to move all items you’ve already collected to a designated Dropzone.\n\n This ensures the items are reorganized or returned to their original locations in the warehouse. Please make sure to properly transfer the items to a Dropzone before completing the cancellation.</string>
    <string name="yes_cancel">Yes, Cancel</string>
    <string name="new_container">New Container</string>
    <string name="choose_the_type_of_shipping_container_you_want_to_add_to_this_packing_list">Choose the type of shipping container you want to add to this packing list</string>
    <string name="create">Create</string>
    <string name="packing_drop_zone">Packing Drop Zone</string>
    <string name="select_an_item_in_the_list_to_assign_a_drop_zone">Select an item in the list to assign a Drop Zone</string>
    <string name="europallete_details">Europallete details</string>
    <string name="enter_the_specific_dimensions_and_weight_of_the_shipping_container">Enter the specific dimensions and weight of the shipping container</string>
    <string name="width_cm">Width (cm)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="depth_cm">Depth (cm)</string>
    <string name="net_weight_kg">Net Weight (kg)</string>
    <string name="total_weight_kg">Total Weight (kg)</string>
    <string name="create_without">Create Without</string>
</resources>