<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp">

    <View
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:background="@drawable/rounded_grey" />


    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/packing_list_incomplete_icon"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/packing_list_incomplete"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/dark_grey_70"
        android:text="@string/your_packing_list_is_not_complete_would_you_like_to_pause_the_packing_process_and_resume_it_later_or_you_can_close_anyway_and_finich_the_packing"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@style/BaseButton"
        android:paddingVertical="12dp"
        android:textAllCaps="true"
        android:layout_marginHorizontal="4dp"
        android:text="@string/close_anyway" />

    <TextView
        android:id="@+id/pauseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/OutlineButton"
        android:textColor="@color/blood_orange"
        android:paddingVertical="12dp"
        android:textAllCaps="true"
        android:layout_marginHorizontal="4dp"
        android:text="@string/pause_the_list" />

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/OutlineButton"
        android:textColor="@color/blood_orange"
        android:paddingVertical="12dp"
        android:textAllCaps="true"
        android:layout_marginHorizontal="4dp"
        android:text="@string/cancel_this_list" />

    <TextView
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="4dp"
        android:background="@color/transparent"
        android:text="@string/back"
        android:gravity="center"
        android:textAllCaps="true"
        android:paddingVertical="12dp"
        style="@style/TransparentButton"
        android:textColor="@color/blood_orange"/>

</LinearLayout>