<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/europallete_details"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:padding="8dp" />


    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_specific_dimensions_and_weight_of_the_shipping_container"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/dark_grey_50"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/width_text_input"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/width_cm"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/blood_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/width_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/robotoregular"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_text_input"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/height_cm"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/blood_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/robotoregular"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/depth_text_input"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/depth_cm"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/blood_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/depth_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/robotoregular"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/net_weight_text_input"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/net_weight_kg"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/blood_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/net_weight_item_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/robotoregular"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/total_weight_text_input"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/total_weight_kg"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/blood_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/total_weight_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/robotoregular"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/BaseButton"
        android:paddingVertical="12dp"
        android:textAllCaps="true"
        android:layout_marginHorizontal="4dp"
        android:text="@string/create" />

    <TextView
        android:id="@+id/createWithoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/TransparentButton"
        android:paddingVertical="12dp"
        android:textAllCaps="true"
        android:layout_marginHorizontal="4dp"
        android:text="@string/create_without" />
</LinearLayout>
