<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/packing_drop_zone"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="22sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textColor="@color/grey_400"
        android:text="@string/select_an_item_in_the_list_to_assign_a_drop_zone"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/dropOffButton"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="12dp"
        android:text="@string/drop_off"
        android:textAllCaps="true" />


</LinearLayout>
