<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/unit_meter_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/unit_meter_type_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:textColor="@color/gray_text_color"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textViewFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="center_horizontal"
        android:text="@string/unit_type_footer"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:textColor="@color/gray_text_color"
        android:textSize="13sp" />

</LinearLayout>