<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp">

    <View
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:background="@drawable/rounded_grey" />


    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/cancel_packing_list_icon"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/do_you_want_to_proceed_and_cancel_the_packing_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/dark_grey_70"
        android:text="@string/canceling_this_process_will_require_you_to_move_all_items_you_ve_already_collected_to_a_designated_dropzone_n_n_this_ensures_the_items_are_reorganized_or_returned_to_their_original_locations_in_the_warehouse_please_make_sure_to_properly_transfer_the_items_to_a_dropzone_before_completing_the_cancellation"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@style/BaseButton"
        android:paddingVertical="12dp"
        android:textAllCaps="true"
        android:layout_marginHorizontal="4dp"
        android:text="@string/yes_cancel" />


    <TextView
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="4dp"
        android:background="@color/transparent"
        android:text="@string/back"
        android:gravity="center"
        android:textAllCaps="true"
        android:paddingVertical="8dp"
        style="@style/TransparentButton"
        android:textColor="@color/blood_orange"/>

</LinearLayout>